@@ -2,7 +2,7 @@
 Theme Name: Anderson Lite
 Theme URI: https://themezee.com/themes/anderson/
 Description: A clean and elegant magazine theme suitable for any kind of content related website. The theme comes with a fully responsive layout and a sleek featured post slideshow. The user-friendly and flexible theme options supporting the powerful Customizer allow you to setup your magazine website in only a few minutes. 
-Version: 1.3.3
+Version: 1.3.4
 Author: ThemeZee
 Author URI: https://themezee.com
 Tags: two-columns, light, green, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, silver, white, gray
@@ -189,15 +189,29 @@ input, textarea, select {
 	font-family: 'Share', Tahoma, Verdana, Arial;
 	line-height: 1.4em;
 }
-#logo a:hover {
+#logo .site-title a:link, 
+#logo .site-title a:visited {
+	color: #fff;
+}
+#logo .site-title a:hover,
+#logo .site-title a:active {
 	text-decoration: none;
 }
-#logo a:hover .site-title {
+#logo .site-title:hover {
 	background: #333;
 	text-decoration: none;
 }
 #logo .site-description {
+	clear: left;
 	margin-top: 0.4em;
+}
+#logo .custom-logo {
+	float: left;
+	margin: 0 1em 0 0;
+	padding: 0;
+	border: none;
+	vertical-align: top;
+	max-width: 100%;
 }
 
 /* Header Banner */
